@@ -30,16 +30,18 @@ if ( is_admin() ) {
 
 /**
  * Check if a given object is a WC_Subscription (or child class of WC_Subscription), or if a given ID
- * belongs to a post with the subscription post type ('shop_subscription')
+ * belongs to a post or order with type ('shop_subscription').
  *
  * @since  1.0.0 - Migrated from WooCommerce Subscriptions v2.0
+ *
+ * @param mixed $subscription A WC_Subscription object or an ID.
  * @return boolean true if anything is found
  */
 function wcs_is_subscription( $subscription ) {
 
 	if ( is_object( $subscription ) && is_a( $subscription, 'WC_Subscription' ) ) {
 		$is_subscription = true;
-	} elseif ( is_numeric( $subscription ) && 'shop_subscription' == get_post_type( $subscription ) ) {
+	} elseif ( is_numeric( $subscription ) && 'shop_subscription' === WC_Data_Store::load( 'subscription' )->get_order_type( $subscription ) ) {
 		$is_subscription = true;
 	} else {
 		$is_subscription = false;
